Version 0.28.0
   * Revamped how gene locations are handled internally to deal with complicated
     cases: trans-spliced genes, internal frameshifts, indeterminate start/end 
     coordinated found in incomplete genomes, genes that cross the origin of
     circular chromosomes, etc.
   * Fixed pathologically slow fitting of very high coverage reference sequences
     (for example, in samples containing high copy number plasmids).

Version 0.27.2
   * breseq CL-TABULATE command for analyzing changes in contingency loci
     (hypermutable homopolymer stretches).
   * Bug fixes and updates to various gdtools and breseq utility commands.
   * Fixed rare bug leading to duplicate mutation predictions in repeat regions.

Version 0.27.1
   * Improved stability; fixed two sources of rare crashes.
   * The samtools executable is no longer included/installed/required.
   * Fixed backward compatibility with RA lines that was broken in 0.27.0

Version 0.27.0
   * Now accepts gzipped (*.gz) FASTQ input files.
   * Logic and options controlling predictions of consensus versus polymorphic
     mutations improved and now explained via flowcharts in the documentation.
   * Three new tutorials from EMBO course added to the documentation.
   * Continued updates and improvements to various gdtools commands.

Version 0.26.1
   * Fixed a crash that sometimes occurred when processing polymorphism statistics.
   * Corrected handling of shifted positions for some indel mutations.
   * Updates to several gdtools commands. Usage changed in some cases.

Version 0.26.0
   * First version with binary distributions for Linux and MacOSX.
   * Updated HTML documentation (installation instructions, annotated bibliography, FAQ).

Version 0.25d
   * Fixed problems introduced when program_data_path moved to being relative
     rather than absolute; affected bam2cov for example.

Version 0.25c
    * Maintenance release with bug fix for a rare problem affecting